Only upload index.html if the content version number is changed.

--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 Your Name</p>
+        <p>&copy;On November 29, 2023 by Qin Xu</p>
     </footer>
 </body>
 </html>
