Upload assets using for_each

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
 <body>
     <header>
         <h1>How to Carve a Pumpkin</h1>
+        
     </header>
 
     <main>
@@ -22,8 +23,8 @@
             <h2>Step 1: Gather Your Materials</h2>
             <p>Before you start carving your pumpkin, make sure you have the following materials:</p>
             <ul>
-                <li>A pumpkin</li>
-                <li>Sharp carving tools</li>
+                <li>A pumpkin</li><img src="/assets/pumpkin.jpg">
+                <li>Sharp carving tools</li><img src="/assets/carving-tools.jpg">
                 <li>Newspaper or a disposable tablecloth</li>
                 <li>A marker for drawing your design</li>
                 <li>Tea light or LED candle</li>
