--- a/public/roasting/index.html
+++ b/public/roasting/index.html
@@ -22,7 +22,7 @@
         <section>
             <h2>Step 1: Gather Your Ingredients</h2>
             <ul>
-                <li>2 teaspoons paprika</li><img src="/assets/paprika.png">
+                <li>2 teaspoons paprika</li><img src="/assets/paprika.png" width="300px" height="300px">
                 <li>2 teaspoons salt</li>
                 <li>1 teaspoon black pepper</li>
                 <li>1 (5 pound) whole duck</li>
