--- a/public/roasting/index.html
+++ b/public/roasting/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Roasted Duck</title>
+    <title>Roasting a Duck</title>
     <style>
         /* Add your CSS styles here */
         img {
@@ -13,6 +13,56 @@
     </style>
 </head>
 <body>
+    <div id="container">
+        <div id="toc">
+            <h2>Table of Contents</h2>
+            <ul>
+                <li><a href="#step1">Step 1</a></li>
+                <li><a href="#step2">Step 2</a></li>
+                <li><a href="#step3">Step 3</a></li>
+                <li><a href="#step4">Step 4</a></li>
+                <li><a href="#step5">Step 5</a></li>
+                <li><a href="#step6">Step 6</a></li>
+            </ul>
+        </div>
+        <div id="content">
+            <h1>How to Roast a Duck</h1>
+            <p>This is the description of the steps to roast a duck.</p>
+
+            <h2 id="step1">Gather Your Ingredients</h2>
+            <p><ul>
+                    <li>2 teaspoons paprika</li><img src="/assets/paprika.png" width="100px" height="100px">
+                    <li>2 teaspoons salt</li>
+                    <li>1 teaspoon black pepper</li>
+                    <li>1 (5 pound) whole duck</li>
+                    <li>½ cup butter, melted, divided</li>
+                </ul>
+            </p>
+
+            <img src="step1_image.jpg" alt="Step 1 Image">
+
+            <h2 id="step2">Preheat Oven</h2>
+            <p>Preheat the oven to 375 degrees F (190 degrees C).</p>
+            <img src="step2_image.jpg" alt="Step 2 Image">
+
+            <h2 id="step3">Seasoning</h2>
+            <p>Combine paprika, salt, and pepper in a small bowl; rub spice mixture onto skin of duck. Place duck in a roasting pan.</p>
+            <img src="step3_image.jpg" alt="Step 3 Image">
+
+            <h2 id="step4">Apply Melted Butter</h2>
+            <p>Spoon 1/4 cup melted butter over duck and continue cooking for 45 minutes more.</p>
+            <img src="step4_image.jpg" alt="Step 4 Image">
+
+            <h2 id="step5">Apply Rest of Butter</h2>
+            <p>Spoon remaining 1/4 cup melted butter over duck and cook until golden brown, about 15 minutes more.</p>
+            <img src="step5_image.jpg" alt="Step 5 Image">
+
+            <h2 id="step6">When Finished</h2>
+            <p>After roasting is finished, the cooked duck should be like this.</p>
+            <img src="/assets/roast-duck.jpg" alt="Roasted Duck" width="100px" height="100px">
+        </div>
+    </div>
+<!--     
     <header>
         <h1>How to Roast a Duck</h1>
         
@@ -57,7 +107,7 @@
         </section>
 
         
-    </main>
+    </main> -->
 
     <footer>
         <p>&copy;On February 28, 2024 by Qin Xu</p>
