#42 show the bullets in ingredients section.

--- a/public/roasting/index.html
+++ b/public/roasting/index.html
@@ -111,8 +111,10 @@
         }
 
         img {
-
             border-radius: 8px;
+            width: 150px;
+            height: 150px;
+            background: rgb(230, 230, 230)
         }
 
        nav a {
@@ -148,27 +150,41 @@
                 <div class="flex-grow">
                 <table>
                     <tr>
-                        <td>2 teaspoons paprika</td>
+                        <td>
+                            <ul>
+                                <li>2 teaspoons paprika</li>
+                            </ul>
+                        </td>
                         <td><img src="/assets/paprika.png" width="50px" height="50px"></td>
                     </tr>
                     <tr>
                         <td>
-                            2 teaspoons salt
+                            <ul>
+                                <li>2 teaspoons salt</li>
+                            </ul>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            1 teaspoon black pepper
+                            <ul>
+                                <li>1 teaspoon black pepper</li>
+                            </ul>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            1 (5 pound) whole duck
+                            <td>
+                                <li>1 (5 pound) whole duck</li>
+                            </td>
+                            
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            1/2 cup butter, melted, divided
+                            <ul>
+                                <li>1/2 cup butter, melted, divided</li>
+                            </ul>
+                            
                         </td>
 
                     </tr>
