#42 fixed runner height

--- a/public/roasting/index.html
+++ b/public/roasting/index.html
@@ -67,7 +67,7 @@
             background: url(./assets/roasted-duck-1-c.jpg);
             background-repeat: repeat-y; 
             width: 80px;
-            min-height: 100%; 
+            height: 2228px; 
             position:absolute;
             top: 0px;
             opacity: 0.4;
